--- a/index.html
+++ b/index.html
@@ -180,7 +180,30 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script>
+  var fireballSize = 22;
+  var getFireballSpeed = function(left) {
+    if (left) {
+      return 5;
+    }
+    return 2;
+  };
 
+  wizardSpeed = 3;
+  wizardWidth = 70;
+
+  var getWizardHeight = function(wizardWidth) {
+    return 1.337 * wizardWidth;
+  };
+
+  var getWizardX = function(width) {
+    return width/2-wizardWidth/2;
+  };
+
+  var getWizardY = function(height) {
+    return height/3-getWizardHeight(wizardWidth);
+  };
+</script>
 <script src="js/game.js"></script>
 
 </body>
