--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
   };
 
   var getWizardX = function(width) {
-    return width/2-wizardWidth/2;
+    return width/2 - wizardWidth/2;
   };
 
   var getWizardY = function(height) {
-    return height/3-getWizardHeight(wizardWidth);
+    return height/3 - getWizardHeight(wizardWidth);
   };
 </script>
 <script src="js/game.js"></script>
