--- a/index.html
+++ b/index.html
@@ -183,14 +183,11 @@
 <script>
   var fireballSize = 22;
   var getFireballSpeed = function(left) {
-    if (left) {
-      return 5;
-    }
-    return 2;
+    return left ? 5 : 2;
   };
 
-  wizardSpeed = 3;
-  wizardWidth = 70;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
 
   var getWizardHeight = function(wizardWidth) {
     return 1.337 * wizardWidth;
